# foto

./: AUTHORS  CMakeLists.txt  HACKING  INSTALL  index.html  org.pantheon.Foto.gschema.xml  params.json  style.css
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
css/: style.css
data/: foto.desktop
doc/: CMakeLists.txt
po/: CMakeLists.txt  ar.po  bg.po  ca.po  de.po  en_GB.po  es.po  et.po  eu.po  fi.po  foto.pot  fr.po  gl.po  hu.po  id.po  it.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  ta.po  tr.po  zh_CN.po  zh_TW.po
src/: AppWindow.vala  FotoApp.vala  MainMenu.vala  PageContainer.vala  ViewManager.vala  ViewerWindow.vala
src/core/: ImportJob.vala  PhotoDocument.vala  PictureFilter.vala  PictureSorter.vala
src/core/DAO/: AlbumDAO.vala  Db.vala  FolderDAO.vala  PictureDAO.vala  TagDAO.vala
src/core/PhotoFormat/: BmpDriver.vala  GdkDriver.vala  JfifDriver.vala  Photo.vala  PhotoDriver.vala  PhotoFormat.vala  PhotoMetadata.vala  PngDriver.vala
src/core/VO/: Album.vala  AlbumCollection.vala  Folder.vala  Picture.vala  PictureCollection.vala  Tag.vala  TagCollection.vala
src/dialogs/: AddToAlbumDialog.vala  AlbumDialog.vala  PropertiesDialog.vala  SettingsDialog.vala
src/pages/: AlbumPage.vala  CollectionPage.vala  LastImportedPage.vala  LibraryPage.vala  MapPage.vala  Page.vala  TagPage.vala  ViewerPage.vala  WelcomePage.vala
src/settings/: Settings.vala
src/sidebar/: Sidebar.vala
src/slideshow/: SlideshowWindow.vala
src/util/: CacheUtils.vala  FileHandler.vala  IconFactory.vala  PixbufUtils.vala  string.vala
src/widgets/: AlbumThumb.vala  ButtonGroup.vala  CairoPictureWidget.vala  ColorRow.vala  DropArea.vala  ItemSearchBar.vala  ItemSortBar.vala  LLabel.vala  PicThumb.vala  Rating.vala  ZoomSlider.vala
